feature: Add login screen and styling

--- a/src/app.t.css
+++ b/src/app.t.css
@@ -46,8 +46,8 @@ h6 {
 }
 
 :root {
-  --clr-primary: #032541;
-  --clr-secondary: #21d07a;
+  --clr-primary: #263238;
+  --clr-secondary: #84e19e;
 }
 
 body {
